--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node index.ts"
+    "start": "npm start",
+    "postinstall": "tsc"
   },
   "keywords": [],
   "author": "",
