--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "anime-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
