--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "anime-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "node build/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "postinstall": "tsc"
+    "start": "node build/index.js",
+    "postinstall": "tsc",
+    "tsc": "tsc",
+    "prepare": "npm run tsc"
   },
   "keywords": [],
   "author": "",
