--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "node build/index.js",
   "scripts": {
     "start": "node build/index.js",
-    "postinstall": "tsc"
+    "tsc": "tsc",
+    "prepare": "npm run tsc"
   },
   "keywords": [],
   "author": "",
