--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "node build/index.js",
-    "postinstall": "tsc"
+    "preinstall": "tsc"
   },
   "keywords": [],
   "author": "",
