--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mal-scraper": "^2.11.4",
-    "mongodb": "^4.6.0"
+    "mongodb": "^4.6.0",
+    "typescript": "^4.7.4"
   }
 }
