--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "node build/src/index.js",
-    "postinstall": "npx tsc --watch false"
+    "build": "tsc --watch false"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
     "express": "^4.18.1",
     "mal-scraper": "^2.11.4",
     "mongodb": "^4.6.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "uuid": "^9.0.0"
   }
 }
