--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "start": "node build/src/index.js",
+    "start": "node build/index.js",
     "build": "tsc --watch false"
   },
   "keywords": [],
